# BananaVM

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Source/: main.cpp
Source/BananaVM/: Config.h  Opcode.h  ProcessorThread.cpp  ProcessorThread.h  ThreadContext.cpp  ThreadContext.h  Types.h
Source/BananaVM/Assembler/: Assembler.cpp  Assembler.h
Source/BananaVM/Exception/: InvalidArgumentException.h  VMException.h
Source/BananaVM/Instruction/: AddInstruction.cpp  AddInstruction.h  ArithmeticInstructions.cpp  ArithmeticInstructions.h  BitwiseInstructions.cpp  BitwiseInstructions.h  BranchingInstructions.cpp  BranchingInstructions.h  ComparisionInstructions.cpp  ComparisionInstructions.h  ControlInstructions.cpp  ControlInstructions.h  DebugInstruction.cpp  DebugInstruction.h  HaltInstruction.cpp  HaltInstruction.h  Instruction.cpp  Instruction.h  LoadInstruction.cpp  LoadInstruction.h  MemoryInstructions.cpp  MemoryInstructions.h  StoreInstruction.cpp  StoreInstruction.h  SubtractInstruction.cpp  SubtractInstruction.h
Source/BananaVM/Instruction/Decoder/: InstructionDecoder.cpp  InstructionDecoder.h
Source/BananaVM/Memory/: MemoryResolver.cpp  MemoryResolver.h  MemoryStore.cpp  MemoryStore.h
